--- a/package.json
+++ b/package.json
@@ -10,11 +10,22 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@dudigital/react-native-zoomable-view": "^1.1.3",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "axios": "^0.24.0",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
+    "galio-framework": "^0.8.0",
+    "ionicons": "^6.0.0",
+    "localstorage-polyfill": "^1.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
+    "react-native-share": "^7.3.2",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
